cmake_minimum_required(VERSION 2.8)
project(fish)
add_executable(fish fish.cpp)
find_package (HDF5)
if (HDF5_FOUND)
  include_directories(${HDF5_INCLUDE_DIRS})
  target_link_libraries (fish ${HDF5_LIBRARIES})
endif (HDF5_FOUND)

find_package(SIFT3D)
if(SIFT3D_FOUND)
	include_directories(${SIFT3D_INCLUDE_DIRS})
	target_link_libraries (fish ${SIFT3D_LIBRARIES})
endif (SIFT3D_FOUND)
